debug issue where border radius disappeared on mobile device screen size. Create media query to decrease minmax value for grid items.

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -192,18 +192,6 @@ section {
   color: var(--nav-color);
 }
 
-.cs-pic {
-  width: 100%;
-  height: 100%;
-}
-
-.cs-pic img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  overflow: hidden;
-}
-
 /***Section Header Styling***/
 .cs-content_text {
   display: flex;
